--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="apple-mobile-web-app capable" content="default">
+    <meta name="apple-mobile-web-app capable" content="yes">
+    <meta name="apple-mobile-web-app status-bar-style" content="default">
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -82,4 +83,5 @@
     </script>
 </body>
 </html>
+
 
