--- a/public/html/eliminacion.html
+++ b/public/html/eliminacion.html
@@ -14,7 +14,7 @@
         <div class="centrador"><img class="big-symbol" src="../library/icon-delete.svg"></div>
         
         <div class="heading">Eliminar anuncio</div>
-        <div class="centrador"><div class="descripcion">¿Estás seguro que quieres eliminar este anuncio? Esta acción no se podrá deshacer. Introduce el código de acceso para confirmar la eliminación</div></div>
+        <div class="centrador"><div class="descripcion">Esta acción no se podrá deshacer.</div></div>
         <div class="centrador"><input type="password" class="contraseña" style="caret-color: #E1524B;" id="password" maxlength="10" autofocus></div>
         <div class="help">¿No sabes el código? Si deseas eliminar un anuncio, solicítalo con tu administrador.</div>
         <button class="button" style="background-color: #E1524B;" id="send">Eliminar</button>
@@ -67,5 +67,6 @@ document.getElementById('send').addEventListener('click', async () => {
 
     </body>
 </html>
+
 
 
