--- a/public/html/app.html
+++ b/public/html/app.html
@@ -32,7 +32,7 @@
          </div>
          <div class="ft-cont">
             <div class="ft-title">Acceso desde cualquier dispositivo móvil</div>
-            <div class="ft-desc">Consulta la información importante desde tu teléfono o tablet, sin depender de un escritorio.</div>
+            <div class="ft-desc">Consulta la información importante desde tu teléfono o tablet, sin depender de un escritorio</div>
          </div>
       </div>
       <div class="feature">
@@ -41,7 +41,7 @@
          </div>
          <div class="ft-cont">
             <div class="ft-title">Organización</div>
-            <div class="ft-desc">Todos los comunicados en un solo lugar, sin confusión ni saturación de mensajes.</div>
+            <div class="ft-desc">Todos los comunicados en un solo lugar, sin confusión ni saturación de mensajes</div>
          </div>
       </div>
       <div class="feature">
@@ -50,12 +50,12 @@
          </div>
          <div class="ft-cont">
             <div class="ft-title">Diseño limpio</div>
-            <div class="ft-desc">Todo está pensado para que encuentres lo que buscas de inmediato.</div>
+            <div class="ft-desc">Todo está pensado para que encuentres lo que buscas de inmediato</div>
          </div>
       </div>
       
     </div>
-    <button class="button" id="guardar">Continuar</button>
+    <button class="button" id="guardar">Listo</button>
     <script>
         document.getElementById('guardar').addEventListener('click', () => {
         window.location.href = 'index.html';
@@ -63,3 +63,4 @@
     </script>
 </body>
 </html>
+
